--- a/package.json
+++ b/package.json
@@ -54,13 +54,14 @@
     "@nuxt/eslint-config": "^1.3.1",
     "@types/ejs": "^3.1.5",
     "@types/leaflet": "^1.9.17",
+    "@types/leaflet-editable": "^1.2.6",
     "eslint": "^9.26.0",
     "vite-plugin-vuetify": "^2.1.1",
     "vue-tsc": "^2.2.10",
     "vuetify": "^3.8.4",
     "wrangler": "4.14.4"
   },
-  "packageManager": "pnpm@10.10.0",
+  "packageManager": "pnpm@10.11.0",
   "pnpm": {
     "onlyBuiltDependencies": [
       "@parcel/watcher",
